--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,192 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(183, 176, 176);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pageHeader,
+.appHeader {
+  text-align: center;
+  font-size: 25px;
+  color: black;
+  margin: 30px auto 55px;
+
+}
+
+.appHeader {
+  padding-right: 0;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.container {
+  margin: auto 0;
+  text-align: center;
+  padding: 0 15px;
+}
+
+.flex-container-order-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+button {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px 15px;
+  width: 200px;
+}
+
+.returnButton {
+  margin: auto;
+}
+
+.box {
+  background-color: white;
+  border: 2px solid black;
+  height: 600px;
+  width: 750px;
+  padding-left: 5px;
+  padding-right: 100px;
+  margin-left: 25px;
+}
+
+/* adarsh edits */
+.headerdiv {
+  width: 100%;
+  height: auto;
+  background-color: #FFFFFF;
+  color: #E60E33;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: "Brush Script MT";
+  font-size: xx-large;
+}
+
+#body {
+  padding-bottom: 75px;
+  /* height of footer */
+}
+
+.footerdiv {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 75px;
+  background-color: #d3d3d3df;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.scrollTab {
+  border: 1px solid #eeccee;
+  max-height: 300px;
+  overflow-y: scroll;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.form {
+  margin-top: 5px;
+  margin-left: 3%;
+}
+
+.inputs {
+  width: 100px;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+
+.inputs-large {
+  width: 200px;
+}
+
+.padding-table-columns td {
+  padding: 0 70px 0 0;
+  text-align: left;
+}
+
+.margin-from-left {
+  margin-left: 5%;
+}
+
+/* ant design component styling */
+
+/* default button */
+.ant-btn {
+  color: #FFFFFF;
+  background-color: #E60E33;
+  font-size: 100%;
+  height: max-content;
+  width: max-content;
+}
+
+.ant-btn-default:not(:disabled):hover,
+.ant-btn-defualt:not(:disabled):active {
+  color: #E60E33;
+  background-color: #FFFFFF;
+  border-color: #E60E33;
+  font-size: 100%;
+  height: max-content;
+  width: max-content;
+}
+
+/* primary button */
+.ant-btn-primary {
+  color: #E60E33;
+  background-color: #FFFFFF;
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
+  font-size: 100%;
+  font-weight: bold;
+  height: max-content;
+  width: max-content;
+}
+
+.ant-btn-primary:not(:disabled):hover,
+.ant-btn-primary:not(:disabled):active {
+  color: #FFFFFF;
+  background-color: #E60E33;
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
+  font-size: 100%;
+  font-weight: bold;
+}
+
+/* selectors (dropdown menues) */
+
+.ant-select:hover,
+.ant-select:active {
+  border-color: #E60E33 !important;
+}
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  margin-top: 7px;
+  margin-bottom: 7px;
+  height: 35px;
+  width: 300px;
+}
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector:hover,
+.ant-select-selector:active {
+  border-color: #E60E33 !important;
+}
+
+/* input (user input boxes) */
+
+.ant-input:hover,
+.ant-input:active {
+  border-color: #E60E33;
+  border-inline-end-width: 2px;
+}
+
+.ant-input:focus {
+  border-color: #E60E33;
+  border-inline-end-width: 2px;
 }
